[gd_scene load_steps=12 format=3 uid="uid://enqihp2ojtwd"]

[ext_resource type="Script" path="res://shared/gui/gui.gd" id="1_pj6rs"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory_grid.gd" id="2_bwdsy"]
[ext_resource type="PackedScene" uid="uid://da47abx5vx1x2" path="res://shared/compass/compass.tscn" id="3_ety4p"]
[ext_resource type="Texture2D" uid="uid://dojni262i4fb7" path="res://shared/gui/images/chest-xsmall.png" id="3_j71y0"]
[ext_resource type="Texture2D" uid="uid://3gcgfp7mf8xa" path="res://shared/gui/images/eye-xsmall.png" id="5_28nti"]
[ext_resource type="Texture2D" uid="uid://bmr8rjtcjauci" path="res://shared/gui/images/frame-xsmall.png" id="6_e131k"]
[ext_resource type="Script" path="res://addons/gloot/core/item_slot.gd" id="6_htlug"]
[ext_resource type="Resource" uid="uid://sfu16mj28v8o" path="res://resources/inventory.tres" id="9_28371"]
[ext_resource type="PackedScene" uid="uid://8qu0tlkgu34p" path="res://shared/textbox/text-box.tscn" id="10_7ix3w"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_grid.gd" id="10_bouv6"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_item_slot.gd" id="12_5p7ce"]

[node name="Gui" type="Node2D"]
script = ExtResource("1_pj6rs")

[node name="Compass" parent="." instance=ExtResource("3_ety4p")]
position = Vector2(16, 750)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 281.0
offset_top = 850.0
offset_right = 858.0
offset_bottom = 1020.0

[node name="MarginContainerChest" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="ChestButton" type="TextureButton" parent="HBoxContainer/MarginContainerChest"]
layout_mode = 2
tooltip_text = "Click to access your inventory."
texture_normal = ExtResource("3_j71y0")
stretch_mode = 5

[node name="MarginContainerItem" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="ItemSlot" type="TextureRect" parent="HBoxContainer/MarginContainerItem"]
layout_mode = 2
texture = ExtResource("6_e131k")

[node name="MarginContainerMode" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="ModeButton" type="TextureButton" parent="HBoxContainer/MarginContainerMode"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("5_28nti")

[node name="InventoryGrid" type="Node" parent="."]
script = ExtResource("10_bouv6")
size = Vector2i(10, 5)
item_protoset = ExtResource("9_28371")

[node name="InventoryContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 1.0
offset_top = 1.0
offset_right = 1790.0
offset_bottom = 751.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="InventoryContainer/VBoxContainer"]
layout_mode = 2

[node name="CtrlInventoryGrid" type="Control" parent="InventoryContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(960, 480)
layout_mode = 2
script = ExtResource("2_bwdsy")
field_dimensions = Vector2(96, 96)
inventory_path = NodePath("../../../../InventoryGrid")

[node name="CloseInventoryButton" type="Button" parent="InventoryContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Close inventory"

[node name="ItemSlot" type="Node" parent="."]
script = ExtResource("6_htlug")
inventory_path = NodePath("../InventoryGrid")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 520.0
offset_top = 892.0
offset_right = 584.0
offset_bottom = 956.0
size_flags_horizontal = 4

[node name="CtrlItemSlot" type="Control" parent="."]
custom_minimum_size = Vector2(57.6, 57.6)
layout_mode = 3
anchors_preset = 0
offset_left = 520.0
offset_top = 892.0
offset_right = 577.6
offset_bottom = 949.6
script = ExtResource("12_5p7ce")
item_slot_path = NodePath("../ItemSlot")
icon_scaling = Vector2(0.6, 0.6)
label_visible = false

[node name="Text-box" parent="." instance=ExtResource("10_7ix3w")]
position = Vector2(69, -64)

[connection signal="pressed" from="HBoxContainer/MarginContainerChest/ChestButton" to="." method="_on_chest_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainerMode/ModeButton" to="." method="_on_mode_button_pressed"]
[connection signal="pressed" from="InventoryContainer/VBoxContainer/CloseInventoryButton" to="." method="_on_close_inventory_button_pressed"]
